--- a/Alex_Map.html
+++ b/Alex_Map.html
@@ -72,9 +72,9 @@
         });
 
         // --- Branch & POI layers ---
-        loadMarkers("AlMokhtabar.csv", "icons/almokhtabar.png", alMokhtabarMarkers, true);
-        loadMarkers("AlBorg.csv", "icons/alborg.png", alBorgMarkers, true);
-        loadMarkers("Alfa.csv", "icons/alfa.png", alfaMarkers, true);
+        loadMarkers("AlMokhtabar.csv", "Icons/almokhtabar.png", alMokhtabarMarkers, true);
+        loadMarkers("AlBorg.csv", "Icons/alborg.png", alBorgMarkers, true);
+        loadMarkers("Alfa.csv", "Icons/alfa.png", alfaMarkers, true);
         loadMarkers("Hospitals.csv", "http://maps.google.com/mapfiles/ms/icons/purple-dot.png", hospitalMarkers);
         loadMarkers("Clinics.csv", "http://maps.google.com/mapfiles/ms/icons/orange-dot.png", clinicMarkers);
         loadMarkers("OtherLabs.csv", "http://maps.google.com/mapfiles/ms/icons/yellow-dot.png", otherLabMarkers);
@@ -193,3 +193,4 @@
     </script>
   </body>
 </html>
+
